argocd/media-server/prowlarr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - env:
            - name: PGID
              value: "3000"
            - name: PUID
              value: "3000"
            - name: TZ
              value: America/Chicago
          image: harbor.yanello.net/ghcr/hotio/prowlarr:release-2.5.2.5491@sha256:9f5c86207dd6dcc0820ed2940151630ed40d664e6f27f481abf0678d5ab6b2e4
          imagePullPolicy: IfNotPresent
          name: prowlarr
          ports:
            - containerPort: 9696
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
          startupProbe:
            httpGet:
              path: /
              port: 9696
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /
              port: 9696
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            limits:
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 150Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  labels:
    app: flaresolverr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: flaresolverr
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
        - image: harbor.yanello.net/ghcr/flaresolverr/flaresolverr:v3.5.0@sha256:139dfee1c6f89249c8d665d1333a42e8ec74ec0a86bc6bb1c8461e10d3a66a47
          imagePullPolicy: IfNotPresent
          name: flaresolverr
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 500Mi
          ports:
            - containerPort: 8191
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: 8191
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8191
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
