argocd/media-server/prowlarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Prowlarr
    gethomepage.dev/icon: prowlarr
    gethomepage.dev/description: "Prowlarr is an indexer manager/proxy built on the popular *arr .net/reactjs base stack to integrate with your various PVR apps."
    gethomepage.dev/pod-selector: app=prowlarr
  labels:
    app.kubernetes.io/instance: prowlarr-app
  name: prowlarr-httproute
  namespace: prowlarr
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
  - prowlarr.yanello.net
  rules:
  - backendRefs:
    - name: ak-outpost-authentik-embedded-outpost
      namespace: authentik
      port: 9000
