argocd/media-server/prowlarr/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr
spec:
  endpointSelector:
    matchLabels:
      app: prowlarr
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            k8s:app.kubernetes.io/name: authentik
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: radarr
            app: radarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            app: sonarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: qbittorrent
            app: cross-seed
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prowlarr
            app: flaresolverr
      toPorts:
        - ports:
            - port: "8191"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: radarr
            app: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            app: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flaresolverr
spec:
  endpointSelector:
    matchLabels:
      app: flaresolverr
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prowlarr
            app: prowlarr
      toPorts:
        - ports:
            - port: "8191"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
            - port: "80"
              protocol: TCP
